--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@sanity/cli": "^2.35.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "react-router-dom": "^6.4.4",
