--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "next-sanity": "^3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "@sanity/cli": "^2.35.0",
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "react-router-dom": "^6.4.4",
